Remove fixed width of sidebar so it fills the page on mobile.

--- a/assets/css/stylemaster.css
+++ b/assets/css/stylemaster.css
@@ -121,7 +121,7 @@ h6 {
     background-color: rgb(54, 132, 138);
 } */
 
-#input-message {
+#input-message,  {
     /* border: 1px solid rgb(127, 188, 192); */
     border-color: rgb(127, 188, 192);
     /* border-radius: 5px; */
